--- a/introduccion_VSC/HTML/style.css
+++ b/introduccion_VSC/HTML/style.css
@@ -1,3 +1,23 @@
 *{
     background-color: crimson;
+    color:palevioletred;
 }
+
+p{ /* Selectores de tipo*/
+    color: blue
+}
+
+ol,ol,span{
+    color:goldenrod
+}
+
+#parrafo-principal {
+    font-size:30px;
+        color:navy
+}
+
+.verso-poema{
+    background-color: aqua;
+    font-size: 60px;
+        text-align:center;
+    }
